--- a/src/common/Cart/Cart.css
+++ b/src/common/Cart/Cart.css
@@ -1,5 +1,5 @@
 .cart-items {
-  background: #f6f9fc;
+  background: linear-gradient(-45deg, #0f3460, #fff, #fff, #0f3460);
   height: auto;
   padding: 50px 0;
 }
@@ -14,44 +14,53 @@
   margin-left: 30px;
   height: 130px;
 }
+
 .cart-list {
   background: white;
   margin-top: 30px;
 }
+
 .cart-items .img {
   width: 150px;
   height: 150px;
 }
+
 .cart-items img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
+
 .cart-items .cart-details h3 {
   font-size: 20px;
   font-weight: 500;
   margin-top: 20px;
 }
+
 .cart-items .cart-details h4 {
   font-size: 15px;
   font-weight: 400;
   margin-top: 50px;
   color: grey;
 }
+
 .cart-items h4 span {
   color: #e94560;
   margin-left: 20px;
   font-weight: 500;
 }
+
 .removeCart {
   background: none;
   font-size: 25px;
   text-align: right;
   margin-right: 10px;
 }
+
 .cartControl {
   margin-top: 50px;
 }
+
 .cartControl button {
   width: 40px;
   height: 40px;
@@ -59,23 +68,28 @@
   border-radius: 5px;
   font-size: 20px;
 }
+
 .incCart {
-  background: none;
+  background: #f6f9fc;
   border: 1px solid rgb(3 0 71 / 9%);
   color: #e94560;
 }
+
 .desCart {
   background: #f6f9fc;
 }
+
 .cart-total h4 {
   font-size: 15px;
   font-weight: 400;
 }
+
 .cart-total h3 {
   font-size: 20px;
   font-weight: 500;
   color: #e94560;
 }
+
 .cart-total h2 {
   font-size: 18px;
   margin-bottom: 20px;
@@ -83,9 +97,51 @@
   padding-bottom: 10px;
   color: #e94560;
 }
+
 .no-items {
   color: #e94560;
   font-size: 18px;
   margin-top: 30px;
   height: 130px;
+}
+
+.cart-total{
+  background: linear-gradient(-45deg, #e356, #fff, #6213, black);
+  animation: gradient 15s ease infinite;
+  
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
+.cart-list{
+  background: linear-gradient(-45deg, #e356, #fff, #6213, black);
+  animation: gradient 15s ease infinite;
+  
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+  
+}
+.cart-list li{
+  color: black;
 }
