--- a/src/components/MainPage/Home.css
+++ b/src/components/MainPage/Home.css
@@ -3,22 +3,27 @@
   line-height: 55px;
   margin: 50px 0 20px 0;
 }
+
 .homeSlide p {
   margin: 20px 0;
 }
+
 .homeSlide ul {
   position: absolute;
   bottom: 20px;
 }
+
 .homeSlide ul li {
   border: 2px solid #b8b7b7;
   border-radius: 50%;
   padding: 10px;
 }
+
 .homeSlide ul li button {
   background: transparent !important;
   color: transparent !important;
 }
+
 .homeSlide ul li button::before {
   font-size: 15px !important;
   color: #0f3460;
@@ -27,3 +32,32 @@
   left: 0;
   margin: auto;
 }
+
+.homeSlide {
+  background-color: rgb(73, 98, 106);
+  margin-top: 19px;
+  border-radius: 6px;
+  margin-bottom: 30px;
+
+}
+
+
+
+.home {
+  background-color: whitesmoke;
+}
+
+/* @keyframes color {
+  
+  20%  { background: black; }
+  40%  { background: black; }
+  100% {background: black;}
+ 
+}
+.home {
+  
+  padding-bottom: 20px;
+  animation: color 10s infinite linear;
+} */
+
+
