--- a/src/components/newarrivals/NewArrivals.css
+++ b/src/components/newarrivals/NewArrivals.css
@@ -15,3 +15,15 @@
   width: 100%;
   height: 100%;
 }
+
+.NewArrivals{
+  background-color: darkgrey;
+  
+}
+
+.NewArrivals .container .heading .heading-left h2{
+  position: relative;
+  
+  top: -18px;
+  color: black;
+}
