--- a/src/common/header/Search.css
+++ b/src/common/header/Search.css
@@ -12,6 +12,13 @@
     
 }
 
+
+.logo{
+    height: 70px;
+    margin-top: -15px;
+   
+}
+
 input{
     border-radius: 20px;
     margin-left: auto;
