--- a/src/components/flashDeals/FlashCart.css
+++ b/src/components/flashDeals/FlashCart.css
@@ -1,6 +1,6 @@
 .box .product {
     border-radius: 30px;
-    background: linear-gradient(-45deg, #ee7752, #fff, #23a6d5, #23d5ab);
+    background: linear-gradient(-45deg, #e1d9d7, #fff, #3b7084, #ccd6d4);
     animation: gradient 15s ease infinite;
     
   }
