--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -4,10 +4,10 @@
     
    
     padding-top: 100px;
-    background-image:url('https://anhdepfree.com/wp-content/uploads/2020/11/hinh-anh-background-nen-xanh-dai-sao-trang-lap-lanh.jpg');
-    padding-bottom: 300px;
-    padding-left: 600px;
-    background-repeat: round;
+    background-image:url('https://ongnhuahdpevietnam.com/wp-content/uploads/2022/08/hinh-nen-trang-tinh-khiet.jpg');
+    padding-bottom: 200px;
+    padding-left: 510px;
+    background-repeat:round;
   
     
     
@@ -18,7 +18,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     position: relative;
-    left: 120px;
+    left: 190px;
     top: 50px;
     text-align: center;
     
