--- a/src/pages/Manager.css
+++ b/src/pages/Manager.css
@@ -1,6 +1,6 @@
 .dave{
     height: auto;
-    display: flex;
+    display: flex; 
     justify-content: center;
     align-items: center;
     padding-bottom: 100px;
@@ -15,6 +15,13 @@
 }
 
 
+.search-box{
+    margin-top:30px;
+    margin-bottom: 30px;
+    position: relative;
+    left:500px;
+}
+
 
 
 
@@ -23,7 +30,7 @@
 table td {
     width: 250px;
     height: 30px;
-    background-color: rgb(175, 204, 215);
+    background-color: rgb(148, 177, 186);
     text-align: center;
     color: #333;
     font-size: 17px !important;
@@ -74,6 +81,7 @@ table td button.delete{
 table td button.delete:hover{
     background-color: rgb(92, 5 ,5);
 }
+
 
 
 
